--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <p>Hola Heydi!</p>
     <script src="main.js"></script>
   </body>
 </html>
