Agregue userPrueba y progressPrueba para hacer ejemplos + conexion de data , muestro nombre de alumnas y percent de su curso

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Data Dashboard</title>
@@ -7,6 +7,12 @@
   </head>
   <body>
     <p>Hola Heydi!</p>
+
+    <button onclick="ajax_get_json()">Mostrar Datos</button>
+    <div id = "info"></div>
+    <button onclick="ajax_get_json2()">Mostrar Resultado</button>
+    <div id = "info2"></div>
+
     <script src="main.js"></script>
   </body>
 </html>
