Agregar boton para porcentaje de una alumna por id

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,12 @@
   <body>
     <p>Hola Heydi!</p>
 
-    <button onclick="ajax_get_json()">Mostrar Datos</button>
+    <button onclick="mostrarDatos()">Mostrar Datos</button>
     <div id = "info"></div>
-    <button onclick="ajax_get_json2()">Mostrar Resultado</button>
+    <button onclick="mostrarPercent()">Mostrar % Curso general</button>
     <div id = "info2"></div>
+    <button onclick="mostrarPercentAlumna()">Mostrar percent de la alumna</button>
+    <div id = "PercentAlumna"></div>
 
     <script src="main.js"></script>
   </body>
