--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
     <div id = "info2"></div>
     <button onclick="mostrarPercentAlumna()">Mostrar percent de la alumna</button>
     <div id = "PercentAlumna"></div>
+    <button onclick="mostrarQuizzesAlumna()">Mostrar % quizz de la alumna</button>
+    <div id = "quizzesAlumna"></div>
 
     <script src="main.js"></script>
   </body>
