jalar exercises por alumna

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,9 @@
 
       <!-- <button onclick="mostrarQuizzesAlumna2('00hJv4mzvqM3D9kBy3dfxoJyFV82')">Mostrar % quizz de la alumna</button>
       <div id = "quizzesAlumna"></div> -->
+      <button class="align" id="exercisesByStudent">EXERCISES</button>
+      <div id="resultExerciseByStudent"></div>
+      <div id="resultNo"></div>
 
       <button class="align" id="mostrarQuizzesAlumna">QUIZ POR ALUMNA</button>
       <div id = "quizByStudent"></div>
