Creacion de funcion computeUserStast(user,progress,courses)

--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,15 @@
 
       <button class="align" id="mostrarQuizzesAlumna">QUIZ POR ALUMNA</button>
       <div id = "quizByStudent"></div>
+
+      <button class="align" id="mostrar">muestra</button>
+      <div id = "prueba"></div>
+        
+      <button class="align" id="mostrar2">prueba</button>
+      <div id = "prueba2"></div>
+      <div id = "prueba3"></div>
+
+
       <div id="graphics">
         <div id="lectures"></div>
         <div id="quizzes"></div>
