--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale= 1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
@@ -7,21 +8,30 @@
   <title> Data Dashboard</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <header>
     <h1>
-      <span id="titleOne">Laboratoria</span>
-      <span id="titleTwo"><span id="dash">DASHBOARD</span></span>
+      <span id="titleOne">
+        <img id="logoLaboratoria" src="laboratoria.png" alt="logo_laboratoria">
+      </span>
+      <span id="titleTwo">
+        <span id="dash">DASHBOARD<span id="cohortsH">lim-2018-03-pre-core-pw</span></span>
+      </span>
     </h1>
   </header>
   <section>
     <div id="options">
-      <img id="imgUser" src="https://fotos.subefotos.com/42a631acc3f5c4f673e1004fa6855de1o.jpg" alt="Foto_alejandra"  >
-      <div id="loginInfo">Alejandra Ramirez</div>
-      <span id="ocupationUser">TM</span>
+      <div id="loginInfo">
+        <img id="imgUser" src="https://fotos.subefotos.com/42a631acc3f5c4f673e1004fa6855de1o.jpg" alt="Foto_alejandra">
+        <div id="loginName">Alejandra Ramirez
+          <hr/>
+          <span>Training Manager</span>
+        </div>
+      </div>
       <nav>
         <ul id="x">
-          <li id="dashboard" class="nav">DASHBOARD</li>
+          <li id="dashboard" class="op">DASHBOARD</li>
           <ul>
             <div id="citys">
               <li id="lima">Lima</li>
@@ -30,62 +40,73 @@
               <li>Sao Paulo</li>
             </div>
           </ul>
-          <li id="cohorts" class="nav">COHORTS</li>
-          <li id="courses" class="nav">CURSOS</li>
+          <li id="cohorts" class="op">COHORTS</li>
+          <li id="courses" class="op">CURSOS</li>
         </ul>
       </nav>
     </div>
 
     <div id="info">
 
-      <select id="promo">
+      <!-- <select id="promo">
         <option value="1">2018-1</option>
         <option value="2">2017-2</option>
         <option value="3">2017-1</option>
-      </select>
+      </select> -->
 
       <!-- <input id="student" type="text" onkeyup="ajax_get_json(event.target)">
       <div id="studentResult"></div> -->
+      <!-- <div id="buttons">
+        <button class="align" id="mostrarDatos">LISTA DE ESTUDIANTES</button>
+        <div id="listStudents"></div>
 
-      <button class="align" id="mostrarDatos">LISTA DE ESTUDIANTES</button>
-      <div id = "listStudents"></div>
+        <button class="align" id="mostrarPercent">COMPLETITUD GENERAL</button>
+        <div id="percentStudents"></div>
 
-      <button class="align" id="mostrarPercent">COMPLETITUD GENERAL</button>
-      <div id = "percentStudents"></div>
+        <button class="align" id="mostrarPercentAlumna">COMPLETITUD POR ALUMNA</button>
+        <div id="percentByStudent"></div>
 
-      <button class="align" id="mostrarPercentAlumna">COMPLETITUD POR ALUMNA</button>
-      <div  id = "percentByStudent"></div>
+        <button class="align" id="exercisesByStudent">EXERCISES</button>
+        <div id="resultExerciseByStudent"></div>
+        <div id="resultNo"></div>
 
-      <button class="align" id="exercisesByStudent">EXERCISES</button>
-      <div id="resultExerciseByStudent"></div>
-      <div id="resultNo"></div>
+        <button class="align" id="mostrarQuizzesAlumna">QUIZ POR ALUMNA</button>
+        <div id="quizByStudent"></div>
 
-      <button class="align" id="mostrarQuizzesAlumna">QUIZ POR ALUMNA</button>
-      <div id = "quizByStudent"></div>
-
-      <button class="align" id="mostrar">muestra</button>
-      <div id = "prueba"></div>
-
+        <button class="align" id="mostrar">muestra</button>
+        <div id="prueba"></div>
+      </div> -->
       <!-- <button class="align" id="mostrar2">prueba</button>
       <div id = "prueba2"></div> -->
 
-      <div id = "prueba3"></div>
+      <!-- <div id="prueba3"></div> -->
 
-      <div class="images_desp">
+      <div id="imageCircle">
         <figure>
-            <center><label for="" class="titulo">Exercises</label></center>
-            <!-- <a href=""><img src="imagen2.png" alt=""></a> -->
+          <center>
+            <label for="" class="titulo">Exercises</label>
+          </center>
+          <img id="graphic" src="chartcircle.png" alt="grafico">
+          <hr>
+          <p id="resultTitle">Porcentaje de alumnas que terminó los ejercicios : </p>
+          <hr>
+          <!-- <center>
+            <a href="prueba2.html">Ver Detalles</a>
+          </center> -->
+ 
+          <!-- </figure>
+        <figure>
+          <center>
+            <label for="" class="titulo">Quiz</label>
+          </center>
+          <a href="">
             <img src="imagen2.png" alt="">
-            <hr><p>El porcentaje es : </p><hr>
-            <center><a href="prueba2.html">Ver Detalles</a></center>
-            <button class="align" id="mostrar2">prueba</button>
-        </figure>
-        <figure>
-            <center><label for="" class="titulo">Quiz</label></center>
-            <a href=""><img src="imagen2.png" alt=""></a>
-            <hr><p>El porcentaje es : </p><hr>
-        </figure>
-        <figure>
+          </a>
+          <hr>
+          <p>El porcentaje es : </p>
+          <hr>
+        </figure> -->
+          <!-- <figure>
             <center><label for="" class="titulo">Lectura</label></center>
             <a href=""><img src="imagen2.png" alt=""></a>
             <hr><p>El porcentaje es : </p><hr>
@@ -94,16 +115,22 @@
               <center><label for="" class="titulo">Lectura</label></center>
               <a href=""><img src="imagen2.png" alt=""></a>
               <hr><p>El porcentaje es : </p><hr>
-        </figure>
+        </figure> -->
+        <button id="mostrar2">VER DETALLE</button>
       </div>
-      <div id = "prueba2"></div>
-      <div id="graphics">
+
+      <div id="prueba2"></div>
+
+      <!-- <div id="graphics">
         <div id="lectures"></div>
         <div id="quizzes"></div>
-      </div>
+      </div> -->
     </div>
+
   </section>
+  <footer>Made By Andrea & Heydy</footer>
   <script src="main.js"></script>
   <script src="data.js"></script>
 </body>
+
 </html>
