Agregue orden de tabla de muestra de estudiantes y promedio de exercicios

--- a/src/index.html
+++ b/src/index.html
@@ -102,10 +102,10 @@
       <!-- <div id = "prueba2"></div> -->
 
       <div class="tableauStudents">
+        <div class="averageTotalExercise" id ="promTotalExercises" ></div>
         <div class="listStudents" id = "prueba2"></div>
         <div class="averageExercises" id ="promExercises" >
-        </div>
-        <!-- <div style="clear:both"></div> -->
+        <div style="clear:both"></div>
       </div>
 
     </div>
