demo 2 css readme

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <div id="info">
-
+<p id="infoTitle">General</p>
       <!-- <select id="promo">
         <option value="1">2018-1</option>
         <option value="2">2017-2</option>
