--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
             </center>
             <img id="graphic" src="chartcircle.png" alt="grafico">
             <hr>
-            <p id="resultTitle">Porcentaje de alumnas <br> que terminó los ejercicios : 40 % </p>
+            <p id="resultTitle">Promedio de las estudiantes <br> en los ejercicios : 61 % <span id="percent"></span> </p>
             <hr>
           </figure>
           
