Cambio en el 2do  test

--- a/src/inicio.html
+++ b/src/inicio.html
@@ -83,11 +83,11 @@
             <center>
               <label for="" class="titulo">Exercises</label>
             </center>
-            <img id="graphic" src="chartcircle.png" alt="grafico">
+            <img id="graphic2" src="chartcircle.png" alt="grafico">
             <hr>
-            <p id="resultTitle">Promedio de las estudiantes
+            <p id="resultTitle2">Promedio de las estudiantes
               <br> en los ejercicios : 61 %
-              <span id="percent"></span>
+              <span id="percent2"></span>
               <span id="avgExercises"></span>
             </p>
             <hr>
@@ -99,11 +99,11 @@
             <center>
               <label for="" class="titulo">Exercises</label>
             </center>
-            <img id="graphic" src="chartcircle.png" alt="grafico">
+            <img id="graphic3" src="chartcircle.png" alt="grafico">
             <hr>
-            <p id="resultTitle">Promedio de las estudiantes
+            <p id="resultTitle3">Promedio de las estudiantes
               <br> en los ejercicios : 61 %
-              <span id="percent"></span>
+              <span id="percent3"></span>
               <span id="avgReadings"></span>
             </p>
             <hr>
@@ -115,11 +115,11 @@
             <center>
               <label for="" class="titulo">Exercises</label>
             </center>
-            <img id="graphic" src="chartcircle.png" alt="grafico">
+            <img id="graphic4" src="chartcircle.png" alt="grafico">
             <hr>
-            <p id="resultTitle">Promedio de las estudiantes
+            <p id="resultTitle4">Promedio de las estudiantes
               <br> en los ejercicios : 61 %
-              <span id="percent"></span>
+              <span id="percent4"></span>
               <span id="avgQuizzes"></span>
             </p>
             <hr>
