--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale= 1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
@@ -60,7 +60,7 @@
         <div id="imageCircle">
         <figure>
           <center>
-            <label for="" class="titulo">Quizzes</label>
+            <label class="titulo">Quizzes</label>
           </center>
           <img id="graphic" src="chartcircle.png" alt="grafico">
           <hr>
@@ -75,7 +75,7 @@
         <div id="imageCircle2">
         <figure>
             <center>
-              <label for="" class="titulo">Exercises</label>
+              <label  class="titulo">Exercises</label>
             </center>
             <img id="graphicTwo" src="chartcircle.png" alt="grafico">
             <hr>
@@ -89,7 +89,7 @@
         <div id="imageCircle3">
         <figure>
             <center>
-              <label for="" class="titulo">Lecturas</label>
+              <label class="titulo">Lecturas</label>
             </center>
             <img id="graphicThree" src="chartcircle.png" alt="grafico">
             <hr>
@@ -103,7 +103,7 @@
         <div id="imageCircle4">
         <figure>
             <center>
-              <label for="" class="titulo">Porcentaje Total</label>
+              <label  class="titulo">Porcentaje Total</label>
             </center>
             <img id="graphicFour" src="chartcircle.png" alt="grafico">
             <hr>
