--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,9 @@
           <span>Training Manager</span>
         </div>
       </div>
-      <nav>
-        <li id="dashboard" class="op">Sedes</li>
-        <div id="citys">
+      <div id="chooseChort">
+          <li id="dashboard" class="op">Sedes</li>
+          <div id="citys">
           <ul>
             <li id="lim">Lima</li>
             <li id="arequipa">Arequipa</li>
@@ -40,13 +40,13 @@
             <li id="saoPablo">Sao Paulo</li>
             <li id="otros">Otras sedes</li>
           </ul>    
-        </div>
-        <select id="selectCohorts" name="selectCohorts">
-          <option value="cohort" selected>cohort</option>
-        </select>
-        <div id="container"></div>
-        <li id="courses" class="op">CURSOS</li>
-      </nav>
+          </div>
+          <select id="selectCohorts" name="selectCohorts">
+            <option value="cohort" selected>cohort</option>
+          </select>
+          <div id="container"></div>
+          <li id="courses" class="op">CURSOS</li>
+      </div>
     </div>
     <div id="info">
       <p id="infoTitle">General
@@ -126,12 +126,12 @@
       </div>
       <table id="table">
         <thead>
-          <th class="tableClass">Nombre</th>
-          <th class="tableClass">Avance</th>
-          <th class="tableClass">Ejercicios</th>
-          <th class="tableClass">Lecturas</th>
-          <th class="tableClass">Quizzes total</th>
-          <th class="tableClass">Quizzes promedio</th>
+        <th class="tableClass">Nombre</th>
+        <th class="tableClass">Avance</th>
+        <th class="tableClass">Ejercicios</th>
+        <th class="tableClass">Lecturas</th>
+        <th class="tableClass">Quizzes total</th>
+        <th class="tableClass">Quizzes promedio</th>
         </thead>
         <tbody></tbody>
       </table>
