eliminar algunos botones vacíos

--- a/src/index.html
+++ b/src/index.html
@@ -34,18 +34,18 @@
           <div id="citys">
           <ul>
             <li id="lim">Lima</li>
-            <li id="arequipa">Arequipa</li>
+            <!-- <li id="arequipa">Arequipa</li>
             <li id="cdmx">Ciudad de México</li>
             <li id="guadalajara">Guadalajara</li>
             <li id="saoPablo">Sao Paulo</li>
-            <li id="otros">Otras sedes</li>
+            <li id="otros">Otras sedes</li> -->
           </ul>    
           </div>
           <select id="selectCohorts" name="selectCohorts">
             <option value="cohort" selected>cohort</option>
           </select>
           <div id="container"></div>
-          <li id="courses" class="op">CURSOS</li>
+          <!-- <li id="courses" class="op">CURSOS</li> -->
       </div>
     </div>
     <div id="info">
@@ -138,7 +138,7 @@
       </div>
     </div>
   </section>
-  <!-- <footer>Made By Andrea & Heydy</footer> -->
+  <footer>Made with heart</footer>
   <script src="main.js"></script>
   <script src="data.js"></script>
 </body>
