--- a/src/index.html
+++ b/src/index.html
@@ -11,43 +11,26 @@
   <header>
     <h1>
       <span id="titleOne">
-        <img id="logoLaboratoria" src="laboratoria.png" alt="logo_laboratoria">
+        <img id="logoLaboratoria" src="./img/laboratoria.png" alt="logo_laboratoria">
       </span>
       <span id="titleTwo">
         <span id="dash">DASHBOARD
-          <span id="cohortsH">lim-2018-03-pre-core-pw</span>
+          <span id="cohortsH">PRE-CORE LIMA <br>8va Promoción</span>
         </span>
       </span>
     </h1>
   </header>
-  <section>
-    <div id="options">
-      <div id="loginInfo">
-        <img id="imgUser" src="https://fotos.subefotos.com/42a631acc3f5c4f673e1004fa6855de1o.jpg" alt="Foto_alejandra">
-        <div id="loginName">Alejandra Ramirez
-          <hr/>
-          <span>Training Manager</span>
-        </div>
-      </div>
-      <div id="chooseChort">
-          <li id="dashboard" class="op">Sedes</li>
-          <div id="citys">
-          <ul>
-            <li id="lim">Lima</li>
-            <!-- <li id="arequipa">Arequipa</li>
-            <li id="cdmx">Ciudad de México</li>
-            <li id="guadalajara">Guadalajara</li>
-            <li id="saoPablo">Sao Paulo</li>
-            <li id="otros">Otras sedes</li> -->
-          </ul>    
-          </div>
-          <select id="selectCohorts" name="selectCohorts">
-            <option value="cohort" selected>cohort</option>
-          </select>
-          <div id="container"></div>
-          <!-- <li id="courses" class="op">CURSOS</li> -->
+  <div id="options">
+    <div id="loginInfo">
+      <img id="imgUser" src="https://fotos.subefotos.com/42a631acc3f5c4f673e1004fa6855de1o.jpg" alt="Foto_alejandra">
+      <div id="loginName">Alejandra Ramirez
+        <hr/>
+        <span>Training Manager</span>
       </div>
     </div>
+  </div>
+  <section>
+
     <div id="info">
       <p id="infoTitle">General
         <button id="btnArrayUserStats">Mostrar Datos</button>
@@ -56,7 +39,7 @@
         <div id="imageCircle">
         <figure>
             <label class="titulo">Quizzes</label>
-          <img id="graphic" src="chartcircle.png" alt="grafico">
+          <img id="graphic" src="./img/chartcircle.png" alt="grafico">
           <hr>
           <p id="titleQuizzes">Porcentaje Total de avance
             <br> en los quizzes : <span id="avgQuizzes"></span>
@@ -69,7 +52,7 @@
         <div id="imageCircle2">
         <figure>
               <label  class="titulo">Exercises</label>
-            <img id="graphicTwo" src="chartcircle.png" alt="grafico">
+            <img id="graphicTwo" src="./img/chartcircle.png" alt="grafico">
             <hr>
             <p id="titleExercises">Porcentaje Total de avance
               <br> en los ejercicios :
@@ -81,7 +64,7 @@
         <div id="imageCircle3">
         <figure>
               <label class="titulo">Lecturas</label>
-            <img id="graphicThree" src="chartcircle.png" alt="grafico">
+            <img id="graphicThree" src="./img/chartcircle.png" alt="grafico">
             <hr>
             <p id="titleReads">Porcentaje Total de avance
               <br> en las lecturas :
@@ -93,7 +76,7 @@
         <div id="imageCircle4">
         <figure>
               <label  class="titulo">Porcentaje Total</label>
-            <img id="graphicFour" src="chartcircle.png" alt="grafico">
+            <img id="graphicFour" src="./img/chartcircle.png" alt="grafico">
             <hr>
             <p id="titlePercentTotal">Porcentaje Total 
               <br> de avance :
